fixed alignments and added responsive feature in createPost page

--- a/web/css/createPost.css
+++ b/web/css/createPost.css
@@ -1,7 +1,6 @@
 /* Sets parameters for the input */
 .postContainer input[type=text], input[type=password], textarea.box {
-    width: 30%;
-    padding: 12px 20px;
+    padding: 15px 20px;
     margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
@@ -67,7 +66,11 @@ p.info {
     margin-left: 43%;
 }
 .title {
-    margin-left: 12%;
+    margin-left: 2%;
+}
+
+.price {
+    margin-left: 1.6%;
 }
 .fileinput{
     margin-left: 8.5%;
@@ -77,17 +80,37 @@ p.info {
 }
 
 label.description {
-    margin-left: 18.75%;
+    margin-left: -5.5%;
 }
 .description {
-    margin-left: 25.5%;
-    width: 100%;
+    margin-left: 11.4%;
+    width: 110%;
 }
 
-.postContainerform .form-inline {
-    margin-left: 20%;
+.postContainerform , form-inline{
+    margin-left: 22%;
     width: 50%;
 }
 label.condition {
-    margin-left: -0.6%;
+    margin-left: -16.5%;
+
+}
+label.category {
+    margin-left: -15.5%;
+}
+
+.condition {
+    margin-left: 11.5%;
+}
+
+.category {
+    margin-left: 11.5%;
+}
+
+label.fileinput {
+    margin-left: -22.5%;
+}
+
+.fileinput {
+    margin-left: 11.5%;
 }
